fixed gap issues with last section

--- a/style.css
+++ b/style.css
@@ -114,9 +114,9 @@ header img{
     display: flex;
     border-radius: 8px;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
     justify-content: center;
-    padding: 30px 45px;
+    padding: 30px 25px;
 }
 
 .blue button{
